Added html version for those who do not have jupyter notebook setup.

--- a/getting_started.ipynb
+++ b/getting_started.ipynb
@@ -1,28 +1,29 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "94d29f1f900dca02",
+   "metadata": {},
    "source": [
     "# Yaml_Sci_Config\n",
     "\n",
     "This is a small library based on ruamel.yaml which adds some functionality to your code and allows you to focus more time on implementation and less on parsing inputs."
-   ],
-   "id": "94d29f1f900dca02"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "16a6d177925b97e1",
+   "metadata": {},
    "source": [
     "## Installation\n",
     "\n",
     "This package is pip installable. To install it, clone the directory and run `pip install PATH` where PATH is the path to the directory. The package is installed as yaml_sci_config."
-   ],
-   "id": "16a6d177925b97e1"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "c3c7c324d91103a1",
+   "metadata": {},
    "source": [
     "\n",
     "## Using the Interface Classes\n",
@@ -31,17 +32,17 @@
     "\n",
     "The following example gives a sneak peek as to what our library can do. We make yaml load a class defined in our interface.\n",
     "\n"
-   ],
-   "id": "c3c7c324d91103a1"
+   ]
   },
   {
+   "cell_type": "code",
+   "id": "efb6bbb757edf174",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-25T11:32:31.200368Z",
-     "start_time": "2025-04-25T11:32:31.116350Z"
+     "end_time": "2025-04-25T11:56:28.855267Z",
+     "start_time": "2025-04-25T11:56:28.780586Z"
     }
    },
-   "cell_type": "code",
    "source": [
     "from datetime import datetime\n",
     "\n",
@@ -59,38 +60,38 @@
     "print(config_load['a'])\n",
     "\n"
    ],
-   "id": "efb6bbb757edf174",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FunctionHandle(module_name='numpy', function_name='sum', _fn_hand=<function sum at 0x000002067FC2F030>)\n"
+      "FunctionHandle(module_name='numpy', function_name='sum', _fn_hand=<function sum at 0x0000024AFFD0B0B0>)\n"
      ]
     }
    ],
    "execution_count": 1
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "fe005341c2e2a4f1",
+   "metadata": {},
    "source": [
     "\n",
     "### Example Load and dump to yaml: Function Handle\n",
     "\n",
     "The previous object we created was called a function handle. Let's see what exactly a function handle does.\n",
     "It should behave in most cases exactly like the function at hand. If you need everything that a function handle needs, though, like __name__ attributes, then call its `to_function_handle` method. (the last line fails because it is not a function handle.\n"
-   ],
-   "id": "fe005341c2e2a4f1"
+   ]
   },
   {
+   "cell_type": "code",
+   "id": "cc335d2e22ee7023",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-25T11:32:31.207088Z",
-     "start_time": "2025-04-25T11:32:31.200368Z"
+     "end_time": "2025-04-25T11:56:28.862214Z",
+     "start_time": "2025-04-25T11:56:28.858270Z"
     }
    },
-   "cell_type": "code",
    "source": [
     "import numpy as np\n",
     "\n",
@@ -109,7 +110,6 @@
     "except AttributeError:\n",
     "    print(f'whoops. couldn''t do that.')"
    ],
-   "id": "cc335d2e22ee7023",
    "outputs": [
     {
      "name": "stdout",
@@ -126,19 +126,22 @@
    "execution_count": 2
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Let's send our custom python handle to print to yaml. We dump to a string with yaml_dumps because it is convenient here. Notice our nested config also prints just fine.",
-   "id": "3f25c26ddad79b70"
+   "id": "3f25c26ddad79b70",
+   "metadata": {},
+   "source": [
+    "Let's send our custom python handle to print to yaml. We dump to a string with yaml_dumps because it is convenient here. Notice our nested config also prints just fine."
+   ]
   },
   {
+   "cell_type": "code",
+   "id": "798e077c149c7302",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-25T11:32:31.291283Z",
-     "start_time": "2025-04-25T11:32:31.285115Z"
+     "end_time": "2025-04-25T11:56:28.939995Z",
+     "start_time": "2025-04-25T11:56:28.935936Z"
     }
    },
-   "cell_type": "code",
    "source": [
     "\n",
     "\n",
@@ -147,7 +150,6 @@
     "longer_info_to_dump = {'2':43,'nested_field':{'a':loaded_numpy_sum,'b':'other_string'}}\n",
     "print(yaml_dumps(longer_info_to_dump))"
    ],
-   "id": "798e077c149c7302",
    "outputs": [
     {
      "name": "stdout",
@@ -171,25 +173,26 @@
    "execution_count": 3
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "bcb251d4c7810cfb",
+   "metadata": {},
    "source": [
     "## Interface Builtin classes\n",
     "\n",
     "### Numpy Array Support\n",
     "\n",
     "We have a fine selection of numpy array wrappers, and some parsing. Examples of generating them in python and through YAML strings. Most\n"
-   ],
-   "id": "bcb251d4c7810cfb"
+   ]
   },
   {
+   "cell_type": "code",
+   "id": "ef81d94e105b448f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-25T11:32:31.301829Z",
-     "start_time": "2025-04-25T11:32:31.295319Z"
+     "end_time": "2025-04-25T11:56:28.949570Z",
+     "start_time": "2025-04-25T11:56:28.944597Z"
     }
    },
-   "cell_type": "code",
    "source": [
     "from yaml_sci_config.interface_classes import LogspaceParams,LinspaceParams\n",
     "numpy_examples_str= \\\n",
@@ -210,7 +213,6 @@
     "print(linspace_arr)\n",
     "print(logspace_arr)"
    ],
-   "id": "ef81d94e105b448f",
    "outputs": [
     {
      "name": "stdout",
@@ -225,19 +227,22 @@
    "execution_count": 4
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "We also include other examples of parsing.",
-   "id": "134ec118de279f48"
+   "id": "134ec118de279f48",
+   "metadata": {},
+   "source": [
+    "We also include other examples of parsing."
+   ]
   },
   {
+   "cell_type": "code",
+   "id": "682915391efea739",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-25T11:32:31.313287Z",
-     "start_time": "2025-04-25T11:32:31.307352Z"
+     "end_time": "2025-04-25T11:56:28.959935Z",
+     "start_time": "2025-04-25T11:56:28.954615Z"
     }
    },
-   "cell_type": "code",
    "source": [
     "\n",
     "\n",
@@ -257,7 +262,6 @@
     "\n",
     "print(other_examples)\n"
    ],
-   "id": "682915391efea739",
    "outputs": [
     {
      "name": "stdout",
@@ -270,34 +274,35 @@
    "execution_count": 5
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-25T11:32:31.319531Z",
-     "start_time": "2025-04-25T11:32:31.317359Z"
-    }
-   },
    "cell_type": "code",
-   "source": "",
    "id": "7029c6baa2478061",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-25T11:32:31.330Z",
-     "start_time": "2025-04-25T11:32:31.327813Z"
+     "end_time": "2025-04-25T11:56:28.966250Z",
+     "start_time": "2025-04-25T11:56:28.964078Z"
     }
    },
-   "cell_type": "code",
-   "source": "",
-   "id": "166508c4a3d591f2",
+   "source": [],
    "outputs": [],
    "execution_count": null
   },
   {
-   "metadata": {},
+   "cell_type": "code",
+   "id": "166508c4a3d591f2",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-25T11:56:28.972614Z",
+     "start_time": "2025-04-25T11:56:28.970326Z"
+    }
+   },
+   "source": [],
+   "outputs": [],
+   "execution_count": null
+  },
+  {
    "cell_type": "markdown",
+   "id": "5ca5f30a4e0995f5",
+   "metadata": {},
    "source": [
     "\n",
     "\n",
@@ -308,17 +313,17 @@
     "\n",
     "\n",
     "\n"
-   ],
-   "id": "5ca5f30a4e0995f5"
+   ]
   },
   {
+   "cell_type": "code",
+   "id": "285b274b3e23119b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-25T11:32:31.339338Z",
-     "start_time": "2025-04-25T11:32:31.335004Z"
+     "end_time": "2025-04-25T11:56:28.981421Z",
+     "start_time": "2025-04-25T11:56:28.977236Z"
     }
    },
-   "cell_type": "code",
    "source": [
     "yaml_str='''\\\n",
     "a: !FunctionHandle\n",
@@ -348,7 +353,6 @@
     "sum_axis_neg1 = np_sum_axis_neg1(test_arr)\n",
     "print(f'all sums: {all_sum}, first axis: {sum_axis_0}, second axis: {sum_axis_neg1}')\n"
    ],
-   "id": "285b274b3e23119b",
    "outputs": [
     {
      "name": "stdout",
@@ -361,13 +365,14 @@
    "execution_count": 6
   },
   {
+   "cell_type": "code",
+   "id": "d216a038672c728b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-25T11:32:31.351218Z",
-     "start_time": "2025-04-25T11:32:31.347517Z"
+     "end_time": "2025-04-25T11:56:28.990551Z",
+     "start_time": "2025-04-25T11:56:28.986521Z"
     }
    },
-   "cell_type": "code",
    "source": [
     "import datetime\n",
     "yaml_str = '''\\\n",
@@ -390,7 +395,6 @@
     "print(f'x: {x.strftime(\"%Y/%m/%d %H:%M:%S\")}')\n",
     "print(f'y: {y.strftime(\"%Y/%m/%d %H:%M:%S\")}')"
    ],
-   "id": "d216a038672c728b",
    "outputs": [
     {
      "name": "stdout",
@@ -404,23 +408,24 @@
    "execution_count": 7
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "e7d9aac46c9faa4f",
+   "metadata": {},
    "source": [
     "## Making Custom Dataclasses\n",
     "\n",
     "To make a custom dataclass (see python dataclasses documentation), which you can import, is very straightforward."
-   ],
-   "id": "e7d9aac46c9faa4f"
+   ]
   },
   {
+   "cell_type": "code",
+   "id": "c59e41fd89d7dfa5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-25T11:32:31.366571Z",
-     "start_time": "2025-04-25T11:32:31.357685Z"
+     "end_time": "2025-04-25T11:56:29.004030Z",
+     "start_time": "2025-04-25T11:56:28.994996Z"
     }
    },
-   "cell_type": "code",
    "source": [
     "from yaml_sci_config.yaml_interface import yaml_dataclass\n",
     "from numpy.typing import ArrayLike\n",
@@ -473,7 +478,6 @@
     "print(loaded['eyes'])\n",
     "\n"
    ],
-   "id": "c59e41fd89d7dfa5",
    "outputs": [
     {
      "name": "stdout",
@@ -488,53 +492,59 @@
    "execution_count": 8
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Running a script, generating config files.",
-   "id": "c9d3269b011b4ca6"
+   "id": "c9d3269b011b4ca6",
+   "metadata": {},
+   "source": [
+    "# Running a script, generating config files."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Finally, we have an easy way of running a script reproducibly with some helper functions. There is a minimal example in the example folder. When you run `sample_run_config_script.py` it automatically generates a yaml file in its configured output directory. This yaml file can then be used to rerun the program if it is so chosen.",
-   "id": "c658a9ef0a9e5e5d"
+   "id": "c658a9ef0a9e5e5d",
+   "metadata": {},
+   "source": [
+    "Finally, we have an easy way of running a script reproducibly with some helper functions. There is a minimal example in the example folder. When you run `sample_run_config_script.py` it automatically generates a yaml file in its configured output directory. This yaml file can then be used to rerun the program if it is so chosen."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "",
-   "id": "5214bd37fb3b7149"
+   "id": "5214bd37fb3b7149",
+   "metadata": {},
+   "source": []
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "#",
-   "id": "8fb83a83b7f29d80"
+   "id": "8fb83a83b7f29d80",
+   "metadata": {},
+   "source": [
+    "#"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "",
-   "id": "e9dbe224caa4bd9"
+   "id": "e9dbe224caa4bd9",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
