Added html version for those who do not have jupyter notebook setup.

--- a/getting_started.ipynb
+++ b/getting_started.ipynb
@@ -504,7 +504,9 @@
    "id": "c658a9ef0a9e5e5d",
    "metadata": {},
    "source": [
-    "Finally, we have an easy way of running a script reproducibly with some helper functions. There is a minimal example in the example folder. When you run `sample_run_config_script.py` it automatically generates a yaml file in its configured output directory. This yaml file can then be used to rerun the program if it is so chosen."
+    "Finally, we have an easy way of running a script reproducibly with some helper functions. There is a minimal example in the example folder. When you run `sample_run_config_script.py` it automatically generates a yaml file in its configured output directory. This yaml file can then be used to rerun the program if it is so chosen.\n",
+    "\n",
+    "We make sure that it is run with command line arguments. If we run it in the command line it is straightfoward."
    ]
   },
   {
